# parametrics

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  colormap.rs  common.rs  main.rs  math_func.rs  shader.wgsl  surface_data.rs  transforms.rs  vertex_data.rs
